--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,13 @@ name = "Surveys"
 uuid = "cd77d161-fc5b-48bf-9240-23cb3eaa7318"
 version = "0.1.0"
 authors = ["Sam Anklesaria <anklesarian@gmail.com>"]
+
+[deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
+[compat]
+DataFrames = "1.8.1"
+Statistics = "1.11.1"
+StatsBase = "0.34.10"
