--- a/Project.toml
+++ b/Project.toml
@@ -3,9 +3,13 @@ uuid = "cd77d161-fc5b-48bf-9240-23cb3eaa7318"
 version = "0.1.0"
 authors = ["Sam Anklesaria <anklesarian@gmail.com>"]
 
+[workspace]
+projects = ["test", "docs"]
+
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -16,12 +20,10 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 [compat]
 DataFrames = "1.8.1"
 DiffResults = "1.1.0"
+DocStringExtensions = "0.9.5"
 ForwardDiff = "1.3.1"
 HypothesisTests = "0.11.6"
 Statistics = "1.11.1"
 StatsAPI = "1.8.0"
 StatsBase = "0.34.10"
 StatsModels = "0.7.8"
-
-[workspace]
-projects = ["test", "docs"]
