--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
+PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -23,6 +24,7 @@ DiffResults = "1.1.0"
 DocStringExtensions = "0.9.5"
 ForwardDiff = "1.3.1"
 HypothesisTests = "0.11.6"
+PDMats = "0.11.37"
 Statistics = "1.11.1"
 StatsAPI = "1.8.0"
 StatsBase = "0.34.10"
