--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,5 +5,6 @@ DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 Surveys = "cd77d161-fc5b-48bf-9240-23cb3eaa7318"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
