--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
+RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -25,6 +26,7 @@ ForwardDiff = "1.3.1"
 HypothesisTests = "0.11.6"
 LinearAlgebra = "1.12.0"
 PDMats = "0.11.37"
+RCall = "0.14.12"
 Statistics = "1.11.1"
 StatsAPI = "1.8.0"
 StatsBase = "0.34.10"
